fix math for game-container alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ html body {
     position: absolute;
     width: 768px;
     height:1024px;
-    left:calc(50% - 364px);
+    left:calc(50% - 384px);
 }
 
 /* ----- Backgrounds */
@@ -49,7 +49,7 @@ html body {
     position: absolute;
     width: 768px;
     height:1024px;
-    left:calc(50% - 364px);
+    left:calc(50% - 384px);
     pointer-events: none;
 }
 
@@ -160,7 +160,7 @@ body {
     position: absolute;
     width: 768px;
     height:1024px;
-    left:calc(50% - 364px);
+    left:calc(50% - 384px);
     pointer-events: none;
 }
 
